# Gymalyze

./: LICENSE  README.md  build_exe.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
experiments/: angle_thresholds_v2.json  autoencoder.ipynb  autoencoder_hyperparameter_tuning_live.csv  autoencoder_results_diagrams.ipynb  data_inspection.ipynb  fine-tuning-test.ipynb  hyperparameter_tuning_progress.csv  lstm_autoencoder_tuning_results.csv  lstm_train_diagrams.ipynb  reps_counter.ipynb  sql_base.md  test-lstm.ipynb  train-lstm.ipynb  use_case_diagram.md
src/: main.py
src/data/: angle_thresholds.json  app_data.db  body_parts_and_feedback.json  exercise_data.py  label_mapping.json
src/gui/: exercise_library_screen.py  home_screen.py  live_detection.py  login_screen.py  sign_up_screen.py  train_exercise.py  upload_review.py
src/models/: lstm.py  pose_autoencoder.py
src/saved_models/: autoencoder_v1.pth
src/utils/: autoencoder.ipynb  autoencoder_exercise_evaluator.py  config.py  data_inspection.ipynb  database.py  exercise_evaluators.py  extract_landmarks_from_videos.py  fine-tuning-autoencoder.ipynb  fine-tuning-lstm.ipynb  frame_processor.py  label_mapping.json  merge_npy_files.py  pose_estimator.py  repetition_counter.py  sequence_comparator.py  train-lstm.ipynb  video_handling.py  video_processor.py  visualize_fine_tuning.py
src/utils/imutils/: video.py
tests/: test_database.py  test_video_processor.py
